--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "plugin-scaffold",
   "version": "1.0.0",
-  "description": "10up Plugin Scaffold",
+  "description": "Pragmatic Plugin Scaffold",
   "author": {
-    "name": "10up",
-    "email": "info@10up.com",
-    "url": "https://10up.com",
+    "name": "Pragmatic",
+    "email": "info@pragmatic.agency",
+    "url": "https://pragmatic.agency",
     "role": "developer"
   },
   "scripts": {
@@ -38,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/10up/plugin-scaffold"
+    "url": "https://github.com/colis/plugin-scaffold"
   },
   "devDependencies": {
     "@10up/eslint-config": "^1.0.9",
